--- a/assets/css/css-master.css
+++ b/assets/css/css-master.css
@@ -9519,6 +9519,17 @@ svg {
   color: var(--color-yellow);
 }
 
+.progress {
+  margin-top: calc(10 / var(--vw) * var(--multiplier)) !important;
+  margin-bottom: calc(10 / var(--vw) * var(--multiplier)) !important;
+  height: calc(7.5 / var(--vw) * var(--multiplier));
+  background: var(--color-grey-super-light);
+  border-radius: 50em;
+}
+.progress .progress-bar {
+  background: var(--color-black);
+}
+
 .mf-cursor {
   background: var(--color-primary);
 }
@@ -10368,6 +10379,49 @@ svg {
     padding-right: calc(15 / var(--vw) * var(--multiplier)) !important;
   }
 }
+.page .page-content.page-report .page-wrapper.primary .col-page-outer {
+  position: relative;
+  width: 100%;
+  min-height: 1%;
+  padding: 0 calc(15 / var(--vw) * var(--multiplier));
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding-left: calc(20 / var(--vw) * var(--multiplier)) !important;
+  padding-right: calc(20 / var(--vw) * var(--multiplier)) !important;
+}
+.page .page-content.page-report .page-wrapper.primary .col-page-outer .col-page-inner {
+  position: relative;
+  width: 100%;
+  min-height: 1%;
+  padding: 0 calc(15 / var(--vw) * var(--multiplier));
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
+  padding-left: calc(10 / var(--vw) * var(--multiplier)) !important;
+  padding-right: calc(10 / var(--vw) * var(--multiplier)) !important;
+  margin-bottom: calc(20 / var(--vw) * var(--multiplier)) !important;
+}
+@media (max-width: 991.98px) {
+  .page .page-content.page-report .page-wrapper.primary .col-page-outer {
+    padding-left: calc(15 / var(--vw) * var(--multiplier)) !important;
+    padding-right: calc(15 / var(--vw) * var(--multiplier)) !important;
+  }
+  .page .page-content.page-report .page-wrapper.primary .col-page-outer .col-page-inner {
+    position: relative;
+    width: 100%;
+    min-height: 1%;
+    padding: 0 calc(15 / var(--vw) * var(--multiplier));
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding-left: calc(15 / var(--vw) * var(--multiplier)) !important;
+    padding-right: calc(15 / var(--vw) * var(--multiplier)) !important;
+  }
+}
 
 .wizard {
   overflow: hidden;
@@ -10885,86 +10939,6 @@ svg {
     background: rgba(228, 228, 231, 0.5);
   }
 }
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding: calc(20 / var(--vw) * var(--multiplier)) !important;
-  justify-content: space-between;
-  background: rgba(147, 51, 234, 0.05);
-  border: calc(1 / var(--vw) * var(--multiplier)) solid rgb(177.6, 108.8, 239.95);
-  border-radius: calc(7.5 / var(--vw) * var(--multiplier));
-  transition: 0.5s var(--cubic-bezier-1);
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary > .wrapper-inner > .outer {
-  display: flex;
-  align-items: center;
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-icon {
-  margin-right: calc(15 / var(--vw) * var(--multiplier)) !important;
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-icon .icon {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: calc(45 / var(--vw) * var(--multiplier));
-  height: calc(45 / var(--vw) * var(--multiplier));
-  background: rgba(147, 51, 234, 0.1);
-  border-radius: 100%;
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-icon .icon svg {
-  width: calc(20 / var(--vw) * var(--multiplier));
-  height: calc(20 / var(--vw) * var(--multiplier));
-  color: var(--color-purple);
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-text .title .text-title {
-  margin-bottom: 0 !important;
-  font-size: calc(var(--font-size-h4) / var(--vw) * var(--multiplier));
-  color: var(--color-black);
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-text .subtitle .text-subtitle {
-  color: var(--color-black);
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-progress {
-  text-align: right;
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-progress .progress-caption {
-  margin-bottom: calc(-5 / var(--vw) * var(--multiplier)) !important;
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-progress .progress-caption .caption > span {
-  font-size: calc(var(--font-size-small) / var(--vw) * var(--multiplier));
-  justify-content: space-between;
-  color: var(--color-black);
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-progress .progress {
-  margin-top: calc(10 / var(--vw) * var(--multiplier)) !important;
-  margin-bottom: calc(10 / var(--vw) * var(--multiplier)) !important;
-  width: calc(125 / var(--vw) * var(--multiplier));
-  height: calc(7.5 / var(--vw) * var(--multiplier));
-  background: var(--color-grey-super-light);
-  border-radius: 50em;
-}
-.wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-progress .progress .progress-bar {
-  background: var(--color-black);
-}
-@media (max-width: 767.98px) {
-  .wizard .level-progress.primary .level-progress-content .content-wrapper.primary {
-    display: block;
-    padding: calc(15 / var(--vw) * var(--multiplier)) !important;
-  }
-  .wizard .level-progress.primary .level-progress-content .content-wrapper.primary > .wrapper-inner:first-child {
-    margin-bottom: calc(10 / var(--vw) * var(--multiplier)) !important;
-  }
-  .wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-text .title .text-title {
-    font-size: calc(var(--font-size-h5) / var(--vw) * var(--multiplier));
-  }
-  .wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-progress {
-    text-align: left;
-  }
-  .wizard .level-progress.primary .level-progress-content .content-wrapper.primary .content-progress .progress {
-    width: 100% !important;
-  }
-}
 .wizard .page-title.primary {
   margin-top: calc(20 / var(--vw) * var(--multiplier)) !important;
 }
@@ -10989,6 +10963,86 @@ svg {
     text-align: center;
   }
 }
+.wizard .performance-subject.primary .performance-subject-header {
+  margin-bottom: calc(20 / var(--vw) * var(--multiplier)) !important;
+}
+.wizard .performance-subject.primary .performance-subject-header .header-text .title .text-title {
+  margin-bottom: 0 !important;
+}
+.wizard .performance-subject.primary .performance-subject-header .header-text .title .text-title svg {
+  margin-right: calc(5 / var(--vw) * var(--multiplier)) !important;
+  width: calc(20 / var(--vw) * var(--multiplier));
+  height: calc(20 / var(--vw) * var(--multiplier));
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary > .wrapper-inner {
+  margin-bottom: calc(15 / var(--vw) * var(--multiplier)) !important;
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary > .wrapper-inner:last-child {
+  margin-bottom: 0 !important;
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .col-progress-outer {
+  position: relative;
+  width: 100%;
+  min-height: 1%;
+  padding: 0 calc(15 / var(--vw) * var(--multiplier));
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 0 calc(25 / var(--vw) * var(--multiplier));
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .col-progress-outer .col-progress-inner {
+  position: relative;
+  width: 100%;
+  min-height: 1%;
+  padding: 0 calc(15 / var(--vw) * var(--multiplier));
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 33.33333%;
+  flex: 0 0 33.33333%;
+  max-width: 33.33333%;
+  padding-left: calc(5 / var(--vw) * var(--multiplier)) !important;
+  padding-right: calc(5 / var(--vw) * var(--multiplier)) !important;
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .col-progress-outer .col-progress-inner:nth-child(1) .progress-tag .tag > span {
+  background: rgba(37, 99, 235, 0.065);
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .col-progress-outer .col-progress-inner:nth-child(2) .progress-tag .tag > span {
+  background: rgba(22, 163, 74, 0.065);
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .col-progress-outer .col-progress-inner:nth-child(3) .progress-tag .tag > span {
+  background: rgba(147, 51, 234, 0.065);
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .progress-text .title .text-title > span {
+  display: flex;
+  align-items: center;
+  font-size: calc(var(--font-size-h6) / var(--vw) * var(--multiplier));
+  justify-content: space-between;
+  font-weight: var(--font-weight-medium);
+  color: var(--color-black);
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .progress-text .title .text-title > span > span:last-child {
+  font-weight: var(--font-weight-regular);
+  color: var(--color-grey);
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .progress-tag {
+  text-align: center;
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .progress-tag .tag > span {
+  display: block;
+  padding: calc(10 / var(--vw) * var(--multiplier)) !important;
+  font-size: calc(var(--font-size-small) / var(--vw) * var(--multiplier));
+  background: var(--color-grey-super-light);
+  border-radius: calc(2.5 / var(--vw) * var(--multiplier));
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .progress-tag .tag > span > span {
+  display: block;
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .progress-tag .tag > span > span:first-child {
+  font-weight: var(--font-weight-medium);
+}
+.wizard .performance-subject.primary .performance-subject-content .content-wrapper.primary .content-progress .progress {
+  height: calc(4 / var(--vw) * var(--multiplier));
+}
 .wizard .progress-detail.primary .progress-detail-header {
   margin-bottom: calc(35 / var(--vw) * var(--multiplier)) !important;
 }
@@ -11012,16 +11066,6 @@ svg {
 .wizard .progress-detail.primary .progress-detail-content .content-wrapper.primary .content-progress .progress-text .title .text-title > span > span:first-child {
   color: var(--color-black);
 }
-.wizard .progress-detail.primary .progress-detail-content .content-wrapper.primary .content-progress .progress {
-  margin-top: calc(10 / var(--vw) * var(--multiplier)) !important;
-  margin-bottom: calc(10 / var(--vw) * var(--multiplier)) !important;
-  height: calc(7.5 / var(--vw) * var(--multiplier));
-  background: var(--color-grey-super-light);
-  border-radius: 50em;
-}
-.wizard .progress-detail.primary .progress-detail-content .content-wrapper.primary .content-progress .progress .progress-bar {
-  background: var(--color-black);
-}
 .wizard .progress-detail.primary .progress-detail-content .content-wrapper.primary .content-progress .progress-caption .caption > span {
   display: flex;
   align-items: center;
@@ -11040,6 +11084,106 @@ svg {
   font-size: calc(var(--font-size-small) / var(--vw) * var(--multiplier));
   justify-content: space-between;
   color: var(--color-grey);
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: calc(20 / var(--vw) * var(--multiplier)) !important;
+  justify-content: space-between;
+  background: rgba(147, 51, 234, 0.05);
+  border: calc(1 / var(--vw) * var(--multiplier)) solid rgb(177.6, 108.8, 239.95);
+  border-radius: calc(7.5 / var(--vw) * var(--multiplier));
+  transition: 0.5s var(--cubic-bezier-1);
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary > .wrapper-inner > .outer {
+  display: flex;
+  align-items: center;
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-icon {
+  margin-right: calc(15 / var(--vw) * var(--multiplier)) !important;
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-icon .icon {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: calc(45 / var(--vw) * var(--multiplier));
+  height: calc(45 / var(--vw) * var(--multiplier));
+  background: rgba(147, 51, 234, 0.1);
+  border-radius: 100%;
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-icon .icon svg {
+  width: calc(20 / var(--vw) * var(--multiplier));
+  height: calc(20 / var(--vw) * var(--multiplier));
+  color: var(--color-purple);
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-text .title .text-title {
+  margin-bottom: 0 !important;
+  font-size: calc(var(--font-size-h4) / var(--vw) * var(--multiplier));
+  color: var(--color-black);
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-text .subtitle .text-subtitle {
+  color: var(--color-black);
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-progress {
+  text-align: right;
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-progress .progress-caption {
+  margin-bottom: calc(-5 / var(--vw) * var(--multiplier)) !important;
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-progress .progress-caption .caption > span {
+  font-size: calc(var(--font-size-small) / var(--vw) * var(--multiplier));
+  justify-content: space-between;
+  color: var(--color-black);
+}
+.wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-progress .progress {
+  width: calc(125 / var(--vw) * var(--multiplier));
+}
+@media (max-width: 767.98px) {
+  .wizard .progress-level.primary .progress-level-content .content-wrapper.primary {
+    display: block;
+    padding: calc(15 / var(--vw) * var(--multiplier)) !important;
+  }
+  .wizard .progress-level.primary .progress-level-content .content-wrapper.primary > .wrapper-inner:first-child {
+    margin-bottom: calc(10 / var(--vw) * var(--multiplier)) !important;
+  }
+  .wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-text .title .text-title {
+    font-size: calc(var(--font-size-h5) / var(--vw) * var(--multiplier));
+  }
+  .wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-progress {
+    text-align: left;
+  }
+  .wizard .progress-level.primary .progress-level-content .content-wrapper.primary .content-progress .progress {
+    width: 100% !important;
+  }
+}
+.wizard .progress-weekly.primary .progress-weekly-header {
+  margin-bottom: calc(20 / var(--vw) * var(--multiplier)) !important;
+}
+.wizard .progress-weekly.primary .progress-weekly-header .header-text .title .text-title {
+  margin-bottom: 0 !important;
+}
+.wizard .progress-weekly.primary .progress-weekly-header .header-text .title .text-title svg {
+  margin-right: calc(5 / var(--vw) * var(--multiplier)) !important;
+  width: calc(20 / var(--vw) * var(--multiplier));
+  height: calc(20 / var(--vw) * var(--multiplier));
+}
+.wizard .progress-weekly.primary .progress-weekly-content .content-wrapper.primary > .wrapper-inner {
+  margin-bottom: calc(15 / var(--vw) * var(--multiplier)) !important;
+}
+.wizard .progress-weekly.primary .progress-weekly-content .content-wrapper.primary > .wrapper-inner:last-child {
+  margin-bottom: 0 !important;
+}
+.wizard .progress-weekly.primary .progress-weekly-content .content-wrapper.primary .content-progress .progress-text .title .text-title > span {
+  display: flex;
+  align-items: center;
+  font-size: calc(var(--font-size-small) / var(--vw) * var(--multiplier));
+  justify-content: space-between;
+  font-weight: var(--font-weight-regular);
+  color: var(--color-black);
+}
+.wizard .progress-weekly.primary .progress-weekly-content .content-wrapper.primary .content-progress .progress-text .title .text-title > span > span:last-child {
+  font-weight: var(--font-weight-medium);
 }
 .wizard .quick-access-list.primary .quick-access-list-header {
   margin-bottom: calc(25 / var(--vw) * var(--multiplier));
@@ -11258,6 +11402,70 @@ svg {
     flex: 0 0 100%;
     max-width: 100%;
     margin-bottom: calc(15 / var(--vw) * var(--multiplier)) !important;
+  }
+}
+.wizard .statistic-list.tertiary .statistic-list-content .col-content-outer {
+  position: relative;
+  width: 100%;
+  min-height: 1%;
+  padding: 0 calc(15 / var(--vw) * var(--multiplier));
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding-left: calc(20 / var(--vw) * var(--multiplier)) !important;
+  padding-right: calc(20 / var(--vw) * var(--multiplier)) !important;
+}
+.wizard .statistic-list.tertiary .statistic-list-content .col-content-outer .col-content-inner {
+  position: relative;
+  width: 100%;
+  min-height: 1%;
+  padding: 0 calc(15 / var(--vw) * var(--multiplier));
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 25%;
+  flex: 0 0 25%;
+  max-width: 25%;
+  padding-left: calc(10 / var(--vw) * var(--multiplier)) !important;
+  padding-right: calc(10 / var(--vw) * var(--multiplier)) !important;
+}
+.wizard .statistic-list.tertiary .statistic-list-content .content-wrapper.primary {
+  position: relative;
+  padding: calc(20 / var(--vw) * var(--multiplier)) !important;
+  justify-content: space-between;
+  border: calc(1 / var(--vw) * var(--multiplier)) solid var(--color-grey-light);
+  border-radius: calc(7.5 / var(--vw) * var(--multiplier));
+  transition: 0.5s var(--cubic-bezier-1);
+}
+.wizard .statistic-list.tertiary .statistic-list-content .content-wrapper.primary .content-value .value > span {
+  font-size: calc(var(--font-size-h4) / var(--vw) * var(--multiplier));
+  font-weight: var(--font-weight-bold);
+}
+.wizard .statistic-list.tertiary .statistic-list-content .content-wrapper.primary .content-text .subtitle .text-subtitle {
+  margin-bottom: 0 !important;
+  font-size: calc(var(--font-size-small) / var(--vw) * var(--multiplier));
+}
+.wizard .statistic-list.tertiary .statistic-list-content .content-wrapper.primary .content-caption .caption > span {
+  font-size: calc(var(--font-size-small) / var(--vw) * var(--multiplier));
+}
+@media (max-width: 767.98px) {
+  .wizard .statistic-list.tertiary .statistic-list-content .col-content-outer {
+    padding: 0 calc(25 / var(--vw) * var(--multiplier)) !important;
+  }
+  .wizard .statistic-list.tertiary .statistic-list-content .col-content-outer .col-content-inner {
+    position: relative;
+    width: 100%;
+    min-height: 1%;
+    padding: 0 calc(15 / var(--vw) * var(--multiplier));
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding-left: calc(5 / var(--vw) * var(--multiplier)) !important;
+    padding-right: calc(5 / var(--vw) * var(--multiplier)) !important;
+    margin-bottom: calc(10 / var(--vw) * var(--multiplier)) !important;
+  }
+  .wizard .statistic-list.tertiary .statistic-list-content .content-wrapper.primary {
+    padding: calc(15 / var(--vw) * var(--multiplier)) !important;
   }
 }
 
